Fixed responsive layout bug

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -53,7 +53,7 @@
 		float:none; 
 		width:auto;
 		text-align:center; 
-		margin: .5em auto; 
+		margin: .5em; 
 	}
 
 	#main #content-main{
